add_executable(socks5_server)
target_sources(socks5_server 
                PRIVATE
                test_socks5_server.cpp 
                socks5_server.cpp 
                socks5_client.cpp
                ../../src/co_env.cpp 
                ../../src/co_env.S
                ../../src/connection.cpp 
                ../utils/log.cpp)